Bug 624754 – gdbusaddress.c missing sys/wait.h

https://bugzilla.gnome.org/show_bug.cgi?id=624754

Signed-off-by: David Zeuthen <davidz@redhat.com>